force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <description>Registro de integrações</description>
    <label>Log de Integrações</label>
    <nameField>
        <label>Nome de Log de Integrações</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs de Integrações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>