force-app/main/default/objects/IntegrationLog__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Log possui anexo?</description>
    <inlineHelpText>Log possui anexo?</inlineHelpText>
    <label>Possui Anexo?</label>
    <type>Checkbox</type>
</CustomField>