force-app/main/default/objects/IntegrationLog__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>