force-app/main/default/objects/IntegrationLog__c/fields/ExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>ExecutionDate__c</fullName>
    <description>Data de execução do log de integração</description>
    <inlineHelpText>Data de execução do log de integração</inlineHelpText>
    <label>Data de Execução</label>
    <type>DateTime</type>
</CustomField>