force-app/main/default/objects/IntegrationLog__c/fields/HasDeleted__c.field-meta.xml
<CustomField>
    <fullName>HasDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado como true se houve exclusão de item nesta chamada de integração</description>
    <inlineHelpText>Marcado como true se houve exclusão de item nesta chamada de integração</inlineHelpText>
    <label>Tem exclusão?</label>
    <type>Checkbox</type>
</CustomField>