force-app/main/default/objects/IntegrationLog__c/fields/IntegrationName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationName__c</fullName>
    <description>Nome do pedido de integração</description>
    <inlineHelpText>Exemplo: Pedido IN TOTVS</inlineHelpText>
    <label>Integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>