force-app/main/default/objects/IntegrationLog__c/fields/PayloadOUT__c.field-meta.xml
<CustomField>
    <fullName>PayloadOUT__c</fullName>
    <description>Log enviado</description>
    <inlineHelpText>Log enviado</inlineHelpText>
    <label>Payload OUT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>