force-app/main/default/objects/IntegrationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status do log de integração</description>
    <inlineHelpText>Status do log de integração</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <label>Sucesso</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Falha</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>